dark mode fixed

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -6,14 +6,14 @@ Email: codervent@gmail.com
 File: app.css
 */
 
-body {
+/* body {
 	font-size: 14px;
 	color: #4c5258;
 	letter-spacing: .5px;
 	background: #f7f7ff;
 	overflow-x: hidden;
 	font-family: Roboto, sans-serif
-}
+} */
 
 .admin-wrapper a {
 	text-decoration: none
